--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+	"author":"Laila Danguir",
 	"name": "fcc-learn-npm-package-json",
 	"dependencies": {
 		"express": "^4.14.0"
@@ -11,5 +12,4 @@
 		"type": "git",
 		"url": "https://github.com/freeCodeCamp/boilerplate-npm.git"
 	}
-	"author":"Laila Danguir"
 }
